# mono-repo

./: .gitignore  README.md  docker-compose.yml  runserver.sh
docs/: package-managers.md
env/: db.env  minio.env
services/fast_api/: Dockerfile  requirements.txt
services/fast_api/scripts/: entrypoint.sh
services/pdm_service/: Dockerfile  main.py  pyproject.toml
services/pdm_service/scripts/: entrypoint.sh
services/piptools_service/: Dockerfile  main.py  requirements.in  requirements.txt
services/piptools_service/scripts/: entrypoint.sh
services/poetry_service/: Dockerfile  pyproject.toml
services/poetry_service/scripts/: entrypoint.sh
services/sample-service-2/: Dockerfile  main.py  pyproject.toml
services/sample-service-2/scripts/: entrypoint.sh
