[project]
name = "monoRepo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sunny kumar sinha", email = "thesunnysinha@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.0",
    "unicorn>=2.0.1.post1",
    "uvicorn>=0.30.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
